# swap-cli

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: RELEASING.md
scripts/: mirror_voices.py  wm_eval.py
src/swap_cli/: __init__.py  __main__.py  camera.py  cli.py  config.py  devices.py  display.py  gui.py  license.py  runtime.py  rvc_catalog.py  voice_library.py  voice_model.py  voice_ops.py  voice_prereq.py  voice_router.py  voice_track.py  watermark.py
src/swap_cli/voice_engines/: __init__.py  openvoice_engine.py  rvc_converter.py  rvc_engine.py
src/swap_cli/voices/: __init__.py
tests/: test_config.py  test_cuda_torch.py  test_devices.py  test_engine_wiring.py  test_engines.py  test_fairseq_patch.py  test_runtime_timeout.py  test_rvc.py  test_rvc_catalog.py  test_settings_modal.py  test_silent_threshold.py  test_sola.py  test_virtual_camera.py  test_voice_prereq.py  test_voice_router.py  test_watermark.py
tools/: build_library.py  personas.yaml
