[project]
name = "swap-cli"
version = "0.1.0"
description = "Real-time deepfake on your desktop. Bring your own Decart API key."
authors = [{ name = "swap" }]
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.11"
dependencies = [
    "decart>=0.0.35",
    # decart's realtime module imports tenacity but doesn't declare it.
    # Pin here so end users don't hit a ModuleNotFoundError at runtime.
    "tenacity>=8.2",
    "aiortc>=1.9",
    "av>=11.0",
    "opencv-python>=4.10",
    "numpy>=1.26",
    "pillow>=10.0",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "pydantic>=2.7",
    "platformdirs>=4.2",
    "customtkinter>=5.2",
    # Friendly camera names on Windows ("Logitech BRIO" instead of "Camera 1").
    # Wraps DirectShow's filter list — Windows-only.
    "pygrabber>=0.2 ; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]
# Optional voice cloning extra. Only installed when the user explicitly opts
# in via `swap voices install` from the GUI. PyTorch alone is ~2.5 GB so we
# never pull this in the base install.
voice = [
    "torch>=2.2",
    "torchaudio>=2.2",
    "sounddevice>=0.4",
    "librosa>=0.10",
    "soundfile>=0.12",
    "huggingface-hub>=0.20",
    # NOTE: OpenVoice itself is *not* listed here. Its setup.py pins
    # numpy==1.22, librosa==0.9.1, av==10.* (the last has no Win+Py3.11
    # wheel and breaks on modern Cython source builds). We install it
    # separately via `swap voices install` with --no-deps so its broken
    # transitive constraints don't poison the resolver. Tone-color
    # conversion only needs torch + numpy + librosa, which are above.

    # Sprint 14b.2.b: RVC streaming engine. rvc-python is the cleanest
    # Python wrapper for RVC inference. Its public API is batch-file
    # only (infer_file: path → path); we wrap it with temp WAV files
    # for streaming until we either reach into its internals or replace
    # with a streaming-native fork.
    "rvc-python>=0.2",
]

[project.scripts]
swap = "swap_cli.cli:app"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# Allow direct git+ references in optional-dependencies (OpenVoice isn't on
# PyPI under a stable distribution name; we install from MyShell's repo).
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/swap_cli"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
