[project]
name = "swap-cli"
version = "0.1.0"
description = "Real-time deepfake on your desktop. Bring your own Decart API key."
authors = [{ name = "swap" }]
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.11"
dependencies = [
    "decart>=0.0.35",
    # decart's realtime module imports tenacity but doesn't declare it.
    # Pin here so end users don't hit a ModuleNotFoundError at runtime.
    "tenacity>=8.2",
    "aiortc>=1.9",
    "av>=11.0",
    "opencv-python>=4.10",
    "numpy>=1.26",
    "pillow>=10.0",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "pydantic>=2.7",
    "platformdirs>=4.2",
    "customtkinter>=5.2",
    # Friendly camera names on Windows ("Logitech BRIO" instead of "Camera 1").
    # Wraps DirectShow's filter list — Windows-only.
    "pygrabber>=0.2 ; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]
# Optional voice-cloning extra. Sprint 14e: voice = RVC only (OpenVoice
# removed). Only installed when the user explicitly opts in via
# `swap voices install`. PyTorch + the RVC stack is ~3 GB; never pulled
# in the base install.
#
# rvc-python (0.1.5, latest) pins fairseq==0.12.2 and numpy<=1.23.5 —
# both unresolvable on modern stacks. `swap voices install` installs
# rvc-python with --no-deps + a modern fairseq from git, after seeding
# the runtime deps it actually uses (faiss, pyworld, omegaconf, …) at
# modern versions that resolve. See voice_ops.install_voice_deps().
voice = [
    "torch>=2.2",
    "torchaudio>=2.2",
    "sounddevice>=0.4",
    "librosa>=0.10",
    "soundfile>=0.12",
    "huggingface-hub>=0.20",
]

[project.scripts]
swap = "swap_cli.cli:app"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# Allow direct git+ references in optional-dependencies (OpenVoice isn't on
# PyPI under a stable distribution name; we install from MyShell's repo).
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/swap_cli"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
